src/tests/snapshots/cargo_vet__tests__vet__mock-simple-delta-to-full-audit-undershoot.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    cargo vet diff third-party1 5.0.0 7.0.0  (used by first-party)  (+24)

estimated audit backlog: 24 lines

Use |cargo vet certify| to record the audits.

