src/tests/snapshots/cargo_vet__tests__vet__mock-simple-delta-to-unaudited-overshoot.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    cargo vet diff third-party1 5.0.0 4.0.0  (used by first-party)  (-9)

estimated audit backlog: 9 lines

Use |cargo vet certify| to record the audits.

