src/tests/snapshots/cargo_vet__tests__vet__mock-simple-delta-to-unaudited-undershoot.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    cargo vet diff third-party1 5.0.0 7.0.0  (used by first-party)  (1 files changed, 24 insertions(+))

estimated audit backlog: 24 lines

Use |cargo vet certify| to record the audits.

