src/tests/snapshots/cargo_vet__tests__vet__mock-simple-delta-to-unaudited.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "success",
  "vetted_fully": [
    {
      "name": "transitive-third-party1",
      "version": "10.0.0"
    },
    {
      "name": "third-party2",
      "version": "10.0.0"
    }
  ],
  "vetted_partially": [
    {
      "name": "third-party1",
      "version": "10.0.0"
    }
  ],
  "vetted_with_exemptions": []
}
